--- a/src/pages/press.astro
+++ b/src/pages/press.astro
@@ -39,9 +39,12 @@ pressArticles.sort((a, b) => b.data.date.getTime() - a.data.date.getTime());
 
 <style lang="scss">
   .articles {
-    display: flex;
-    flex-direction: column;
-    gap: var(--space-3xl);
     padding-bottom: var(--space-3xl);
+    columns: 2;
+    column-gap: var(--space-3xl);
+
+    @media (width < 800px) {
+      columns: 1;
+    }
   }
 </style>
