--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -142,6 +142,7 @@ const authors = await getEntries(data.authors);
   }
 
   .bio {
+    max-width: 720px;
     display: flex;
     align-items: flex-start;
     gap: var(--space-m);
