--- a/src/components/ArticleLink.astro
+++ b/src/components/ArticleLink.astro
@@ -82,10 +82,9 @@ const { title, date, url, subhead, authors, description, image } = Astro.props;
     mix-blend-mode: multiply;
 
     img {
-      background-color: var(--text);
       border-radius: 3px;
-      object-fit: cover;
-      aspect-ratio: 5 / 3;
+      // object-fit: cover;
+      // aspect-ratio: 5 / 3;
     }
   }
 </style>
