--- a/src/components/PageHeader.astro
+++ b/src/components/PageHeader.astro
@@ -62,15 +62,21 @@ const { title, date, description, annotation = "circle" } = Astro.props;
       display: inline;
       text-wrap: balance;
       margin-inline-start: -0.06em; // Visual alignment
+      hyphens: auto;
 
       &.inverted {
         color: var(--bg);
+      }
+
+      @media (width < 700px) {
+        font-size: var(--step-5);
       }
     }
 
     .subhead {
       margin-block-start: var(--space-l);
       font-size: var(--step-2);
+      line-height: var(--line-height-display);
       text-wrap: balance;
     }
   }
