Improve image performance and add loading animation and snail animation

--- a/src/components/ArticleLink.astro
+++ b/src/components/ArticleLink.astro
@@ -53,6 +53,7 @@ const { title, date, url, subhead, authors, description, image } = Astro.props;
     font-size: var(--step-3);
     font-weight: 600;
     max-width: 36ch;
+    text-wrap: balance;
     hyphens: auto;
     margin-block-end: var(--space-xs);
   }
