--- a/src/layouts/ProseLayout.astro
+++ b/src/layouts/ProseLayout.astro
@@ -49,6 +49,7 @@ const { title, date, description, ogImage, ogAlt, annotation, color } =
     h2,
     h3 {
       margin-block: var(--space-2xl) var(--space-m);
+      text-wrap: balance;
     }
 
     p,
