--- a/src/components/Partners.astro
+++ b/src/components/Partners.astro
@@ -51,7 +51,7 @@ const shuffledPartners = partners.sort(() => 0.5 - Math.random());
       display: grid;
       justify-items: center;
       align-items: center;
-      grid-template-columns: repeat(3, 240px);
+      grid-template-columns: repeat(3, 1fr);
       grid-auto-rows: 80px;
       gap: var(--space-l) var(--space-xl);
       user-select: none;
