Add hero max-width

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,11 +72,11 @@ const { Content } = await entry.render();
   }
 
   .illustration {
-    max-width: 100%;
+    max-width: 900px;
     user-select: none;
     pointer-events: none;
     mix-blend-mode: multiply;
-    animation: slideInUp 0.5s ease-out 0.3s both;
+    animation: slideInUp 0.6s ease-out 0.3s both;
   }
 
   h1 {
