--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -30,12 +30,14 @@ const linkGroups: LinkGroup[] = [
 ---
 
 <footer>
-  <img
-    class="footer-illustration"
-    src="/assets/footer/snail.png"
-    alt="A snail moving to the left"
-    width="240"
-  />
+  <div class="footer-illustration">
+    <img
+      class="footer-illustration"
+      src="/assets/footer/snail.png"
+      alt="A snail moving to the left"
+      width="240"
+    />
+  </div>
   <div class="content">
     <Subscribe />
     <div class="links">
@@ -135,13 +137,34 @@ const linkGroups: LinkGroup[] = [
     }
   }
 
+  @keyframes snailing {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(calc(-100% - 100vw));
+    }
+  }
+
   .footer-illustration {
-    width: 120px;
+    width: 100%;
     position: absolute;
-    bottom: calc(100% - 4px);
-    right: 20px;
-    mix-blend-mode: multiply;
-    user-select: none;
+    bottom: 100%;
+    height: 48px;
+    overflow: hidden;
+
+    img {
+      height: 100%;
+      width: auto;
+      position: absolute;
+      left: 100%;
+      bottom: -4px;
+      mix-blend-mode: multiply;
+      user-select: none;
+      animation: snailing 300s infinite linear;
+      // Offset start
+      animation-delay: -24s;
+    }
   }
 
   .links {
