Fix hero image width

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,7 +72,8 @@ const { Content } = await entry.render();
   }
 
   .illustration {
-    max-width: 900px;
+    width: 900px;
+    max-width: 100%;
     user-select: none;
     pointer-events: none;
     mix-blend-mode: multiply;
