Fix mobile Android issues

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -68,7 +68,7 @@ const linkGroups: LinkGroup[] = [
       {
         Object.values(socialLinks).map(({ href, Icon, text }) => (
           <a {href} title={text}>
-            <Icon />
+            <Icon size={24} />
           </a>
         ))
       }
