--- a/src/components/Partners.astro
+++ b/src/components/Partners.astro
@@ -38,6 +38,7 @@ const shuffledPartners = partners.sort(() => 0.5 - Math.random());
     flex-direction: column;
     margin-inline: auto;
     width: 100%;
+    max-width: 100vw;
     overflow: hidden;
     gap: var(--space-3xl);
     padding-block: var(--space-xl);
