--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,14 +1,12 @@
 :root {
-  /* @link https://utopia.fyi/type/calculator?c=320,18,1.2,1240,22,1.25,6,1,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
-  --step--1: clamp(0.9375rem, 0.881rem + 0.2826vi, 1.1rem);
-  --step-0: clamp(1.125rem, 1.038rem + 0.4348vi, 1.375rem);
-  --step-1: clamp(1.35rem, 1.2217rem + 0.6413vi, 1.7188rem);
-  --step-2: clamp(1.62rem, 1.4362rem + 0.919vi, 2.1484rem);
-  --step-3: clamp(1.944rem, 1.6861rem + 1.2896vi, 2.6855rem);
-  --step-4: clamp(2.3328rem, 1.9766rem + 1.7811vi, 3.3569rem);
-  --step-5: clamp(2.7994rem, 2.3135rem + 2.4292vi, 4.1962rem);
-  --step-6: clamp(3.3592rem, 2.7032rem + 3.28vi, 5.2452rem);
-  --step-7: clamp(4.0311rem, 3.1527rem + 4.3921vi, 6.5565rem);
+  @utopia typeScale({
+    minFontSize: 18,
+    maxFontSize: 22,
+    minTypeScale: 1.2,
+    maxTypeScale: 1.25,
+    positiveSteps: 7,
+    nevativeSteps: 1
+  });
 
   /* @link https://utopia.fyi/space/calculator?c=320,8,1.2,1240,12,1.333,6,2,&s=0.75|0.5,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
   --space-2xs: clamp(0.25rem, 0.2065rem + 0.2174vw, 0.375rem);
