--- a/src/pages/brand-assets/index.astro
+++ b/src/pages/brand-assets/index.astro
@@ -73,7 +73,7 @@ import Swatches from "./_components/Swatches.astro";
     <p>
       Text is always set in <strong>Photocopy Black (#111111)</strong>. Most
       pages should use a single background color beneath black text. Text on top
-      of a full-page image may use <strong>Photocopy White (#F1F1F1)</strong>.
+      of a full-page image may use <strong>Photocopy White (#E1E1E1)</strong>.
     </p>
   </section>
 </BaseLayout>
