--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -8,15 +8,12 @@
     nevativeSteps: 1
   });
 
-  /* @link https://utopia.fyi/space/calculator?c=320,8,1.2,1240,12,1.333,6,2,&s=0.75|0.5,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
-  --space-2xs: clamp(0.25rem, 0.2065rem + 0.2174vw, 0.375rem);
-  --space-xs: clamp(0.375rem, 0.3098rem + 0.3261vw, 0.5625rem);
-  --space-s: clamp(0.5rem, 0.413rem + 0.4348vw, 0.75rem);
-  --space-m: clamp(0.75rem, 0.6196rem + 0.6522vw, 1.125rem);
-  --space-l: clamp(1rem, 0.8261rem + 0.8696vw, 1.5rem);
-  --space-xl: clamp(1.5rem, 1.2391rem + 1.3043vw, 2.25rem);
-  --space-2xl: clamp(2rem, 1.6522rem + 1.7391vw, 3rem);
-  --space-3xl: clamp(3rem, 2.4783rem + 2.6087vw, 4.5rem);
+  @utopia spaceScale({
+    minSize: 8,
+    maxSize: 12,
+    positiveSteps: [1.5, 2, 3, 4, 6],
+    negativeSteps: [0.75, 0.5],
+  })
 
   /* Line heights */
   --line-height-single: 1;
@@ -36,8 +33,36 @@
   --radius-l: var(--space-l);
 
   /* Colors */
-  --bg: #cda5ef;
+  --bg: #CDA5EF;
   --text: #111111;
   --text-placeholder: rgba(0, 0, 0, 0.5);
   --white: #ffffff;
+}
+
+[data-color="purple"] {
+  --bg: #CDA5EF;
+}
+
+[data-color="pink"] {
+  --bg: #ECADD4;
+}
+
+[data-color="blue"] {
+  --bg: #96C7F2;
+}
+
+[data-color="yellow"] {
+  --bg: #ECDD85; 
+}
+
+[data-color="green"] {
+  --bg: #97CF9C;
+}
+
+[data-color="brown"] {
+  --bg: #DDB896;
+}
+
+[data-color="white"] {
+  --bg: #E1E1E1;
 }
