--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -69,6 +69,8 @@ const { Content } = await entry.render();
     padding-block-start: var(--space-3xl);
     margin-inline: calc(-1 * var(--space-m));
     position: relative;
+    overflow: hidden;
+    max-width: 100vw;
   }
 
   .illustration {
