--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -5,7 +5,7 @@
     minTypeScale: 1.2,
     maxTypeScale: 1.25,
     positiveSteps: 7,
-    nevativeSteps: 1
+    negativeSteps: 1,
   });
 
   @utopia spaceScale({
@@ -13,7 +13,7 @@
     maxSize: 12,
     positiveSteps: [1.5, 2, 3, 4, 6],
     negativeSteps: [0.75, 0.5],
-  })
+  });
 
   /* Line heights */
   --line-height-single: 1;
