--- a/src/layouts/ProseLayout.astro
+++ b/src/layouts/ProseLayout.astro
@@ -74,6 +74,13 @@ const { title, date, description, ogImage, ogAlt, annotation, color } =
       }
     }
 
+    ul ul,
+    ol ul,
+    ul ol,
+    ol ol {
+      margin-block: 0;
+    }
+
     img:not(.no-filter) {
       filter: grayscale(100%) contrast(120%) brightness(130%);
       opacity: 0.9;
