--- a/src/pages/subprocessors.astro
+++ b/src/pages/subprocessors.astro
@@ -1,12 +1,8 @@
 ---
-import { marked } from "marked";
+import { fetchPolicy } from "~/helpers/helpers";
 import ProseLayout from "~/layouts/ProseLayout.astro";
 
-const response = await fetch(
-  "https://raw.githubusercontent.com/namesakefyi/policies/main/privacy/index.md"
-);
-const markdown = await response.text();
-const content = marked.parse(markdown);
+const content = await fetchPolicy("subprocessors");
 ---
 
 <ProseLayout
