--- a/src/layouts/ProseLayout.astro
+++ b/src/layouts/ProseLayout.astro
@@ -52,6 +52,10 @@ const { title, date, description, ogImage, ogAlt, annotation, color } =
       text-wrap: balance;
     }
 
+    *:first-child {
+      margin-block-start: 0;
+    }
+
     p,
     ul,
     ol,
@@ -72,6 +76,13 @@ const { title, date, description, ogImage, ogAlt, annotation, color } =
       li {
         padding-inline-start: var(--space-s);
       }
+    }
+
+    ul ul,
+    ol ul,
+    ul ol,
+    ol ol {
+      margin-block: 0;
     }
 
     img:not(.no-filter) {
