Upgrade to Astro 5

--- a/src/pages/[id].astro
+++ b/src/pages/[id].astro
@@ -1,5 +1,5 @@
 ---
-import { getCollection, type CollectionEntry } from "astro:content";
+import { getCollection, type CollectionEntry, render } from "astro:content";
 
 import ProseLayout from "~/layouts/ProseLayout.astro";
 
@@ -11,14 +11,14 @@ export async function getStaticPaths() {
   const pages = await getCollection("pages");
 
   return pages.map((page) => ({
-    params: { slug: page.slug },
-    props: { page },
+    params: { id: page.id },
+    props: page,
   }));
 }
 
 const { page } = Astro.props;
-const { data, render } = page;
-const { Content } = await render();
+const { data } = page;
+const { Content } = await render(page);
 ---
 
 <ProseLayout
