--- a/src/pages/brand-assets/_components/Swatches.astro
+++ b/src/pages/brand-assets/_components/Swatches.astro
@@ -18,7 +18,7 @@ import { colors } from "~/data/colors";
           <div class="buttons">
             <button
               class="button swatch-toggle"
-              data-name={color.slug}
+              data-name={color.id}
               data-color={color.hex}
               title={`Use ${color.name} for site background`}
             >
