--- a/src/pages/abuse.astro
+++ b/src/pages/abuse.astro
@@ -9,6 +9,7 @@ const content = await fetchPolicy("abuse");
   title="Use Restrictions Policy"
   description="It is not okay to use Namesake for these restricted purposes."
   color="brown"
+  annotation="crossed-off"
 >
   <article set:html={content} />
 </ProseLayout>
