--- a/src/pages/terms.astro
+++ b/src/pages/terms.astro
@@ -9,6 +9,7 @@ const content = await fetchPolicy("terms");
   title="Terms of Service"
   description="All the terms that you agree to when you sign up for Namesake."
   color="brown"
+  annotation="box"
 >
   <article set:html={content} />
 </ProseLayout>
