Adds TableOfContents component to ProseLayout
Only initial just to show what is happening

--- a/src/layouts/ProseLayout.astro
+++ b/src/layouts/ProseLayout.astro
@@ -4,6 +4,8 @@ import PageHeader from "~/components/PageHeader.astro";
 import type { NamesakeColor } from "~/data/colors";
 import { smartquotes } from "../helpers/helpers";
 import BaseLayout from "./BaseLayout.astro";
+import type { MarkdownHeading } from "astro";
+import TableOfContents from "~/components/TableOfContents.astro";
 
 interface Props {
   title: string;
@@ -13,10 +15,19 @@ interface Props {
   ogAlt?: string;
   annotation?: RoughAnnotationType;
   color?: NamesakeColor;
+  headings?: MarkdownHeading[];
 }
 
-const { title, date, description, ogImage, ogAlt, annotation, color } =
-  Astro.props;
+const {
+  title,
+  date,
+  description,
+  ogImage,
+  ogAlt,
+  annotation,
+  color,
+  headings,
+} = Astro.props;
 ---
 
 <BaseLayout
@@ -34,6 +45,7 @@ const { title, date, description, ogImage, ogAlt, annotation, color } =
       annotation={annotation}
     />
     <slot name="after-header" />
+    {headings && <TableOfContents headings={headings} />}
     <section itemprop="articleBody" class="prose">
       <slot />
     </section>
